bugfix: fill screen on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -35,7 +35,7 @@ body,
   width: 20%;
   height: auto;
   margin: 0 auto;
-  margin-top: 3%;
+  margin-top: 7%;
   display: flex;
   align-items: center; /* Use align-items instead of align-self */
   justify-content: center;
